fixed layout position for header on mobile

--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -167,7 +167,7 @@
     }
 }
 
-@media screen and(max-width: 1030px) {
+@media screen and(min-width: 1024px) {
 
     .header {
         height: inherit;
