--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -586,7 +586,7 @@ body {
   }
 }
 
-@media screen and (max-width: 1030px) {
+@media screen and (min-width: 1024px) {
   .header {
     height: inherit;
   }
